--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme">
      <meta-data
-      android:name="com.google.android.geo.API_KEY"
-      android:value="AIzaSyC0lWI9pTLPLnpwxCu01CE_lMtB-Q2PxmM"/>
+      android:name="com.google.android.geo.API_KEY"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
